--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,10 +6,19 @@
 
 * {
   box-sizing: border-box;
+}
+
+body, #root {
   margin: 0;
   padding: 0;
 }
 
 #root {
   max-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
