frontend work and throttle utility

--- a/frontend/src/Components/Buttons/button.module.css
+++ b/frontend/src/Components/Buttons/button.module.css
@@ -8,7 +8,7 @@
   border-radius: var(--default-radius);
 
   transform: translate(0);
-  transition: box-shadow 0.2s;
+  transition: all 0.2s ease-out;
 
   color: var(--font-rgb);
   font-size: 16px;
@@ -40,18 +40,16 @@
 }
 
 .btn-primary {
-  box-shadow: 0 1px 8px var(--glow-shadow);
   background-image: linear-gradient(45deg, var(--primary-btn-start), var(--primary-btn-end));
 }
 
 .btn-primary:hover {
   background-image: linear-gradient(-45deg, var(--primary-btn-start), var(--primary-btn-end));
-  box-shadow: 0 12px 12px 6px var(--faint-shadow);
+  box-shadow: 0 0 8px 2px var(--glow-shadow);
 }
 
 .btn-primary:focus {
   background-image: linear-gradient(-22deg, var(--primary-btn-start), var(--primary-btn-end));
-  box-shadow: 0 12px 12px 3px var(--faint-shadow);
   outline: 2px solid var(--glow-shadow);
   outline-offset: 2px;
 }
@@ -62,12 +60,18 @@
 
 .btn-secondary:hover {
   background-image: var(--secondary-btn);
-  box-shadow: 0 12px 12px 6px var(--faint-shadow);
+  box-shadow: 0 0 8px 2px var(--faint-shadow);
 }
 
 .btn-secondary:focus {
   background-image: var(--secondary-btn);
-  box-shadow: 0 12px 12px 3px var(--faint-shadow);
   outline: 2px solid var(--glow-shadow);
   outline-offset: 2px;
+}
+
+.btn:disabled {
+  background-image: var(--secondary-btn) !important;
+  box-shadow: none !important;
+  cursor: not-allowed;
+  opacity: 0.8;
 }
