--- a/frontend/src/Components/Chat/chatActions.module.css
+++ b/frontend/src/Components/Chat/chatActions.module.css
@@ -22,12 +22,12 @@
   font-size: 16px;
   color: var(--font-rgb);
 
-  /* flex: 1 0 400px; */
   height: 100%;
-  min-height: 100%;
+  width: 100%;
+  resize: none;
+  /* min-height: 100%;
   max-height: 150%;
-  resize: vertical;
-
+  resize: vertical; */
   transition: border 0.2s;
 }
 
@@ -38,4 +38,10 @@
 .chatbar:focus {
   border: 4px solid var(--faint-shadow);
   outline: none;
+}
+
+.chatbar:disabled {
+  cursor: not-allowed;
+  background-color: var(--foreground-rgb);
+  opacity: o.8;
 }
