--- a/frontend/src/Components/Chat/chatpanel.module.css
+++ b/frontend/src/Components/Chat/chatpanel.module.css
@@ -1,6 +1,7 @@
-.chat-screen {
+.panel-wrapper {
   display: grid;
   /* 60px is the height of chatActions */
   grid-template-rows: auto 60px;
   height: 100%;
+  width: 100%;
 }
