[UX feat] scroll to bottom under certain circumstances scroll to bottom to show new messages only if the user is near to the bottom of the chat OR the new message has less than 3/4th the height of the container

--- a/frontend/src/Components/Chat/chatActions.module.css
+++ b/frontend/src/Components/Chat/chatActions.module.css
@@ -16,7 +16,7 @@
   border: 4px solid var(--foreground-rgb);
   border-radius: calc(var(--default-radius));
   
-  margin: 0 4px;
+  margin: 0 var(--default-margin);
   padding: 8px;
   
   font-size: 16px;
