--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -13,6 +13,7 @@
   --background-rgb: rgb(0, 0, 0);
   --font-rgb: rgb(255, 255, 255);
   --default-padding: 8px;
+  --default-margin: 4px;
 }
 
 * {
