changed fonts and scroll UX

--- a/frontend/src/Components/Chat/chatActions.module.css
+++ b/frontend/src/Components/Chat/chatActions.module.css
@@ -20,14 +20,12 @@
   padding: 8px;
   
   font-size: 16px;
+  font-family: inherit;
   color: var(--font-rgb);
 
   height: 100%;
   width: 100%;
   resize: none;
-  /* min-height: 100%;
-  max-height: 150%;
-  resize: vertical; */
   transition: border 0.2s;
 }
 
