--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inter", system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
 
@@ -14,6 +14,55 @@
   --font-rgb: rgb(255, 255, 255);
   --default-padding: 8px;
   --default-margin: 4px;
+}
+
+/* static fonts */
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: local("Inter"), url("./assets/fonts/Inter/Inter-Thin.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: italic;
+  font-weight: 100;
+  font-display: swap;
+  src: local("Inter"), url("./assets/fonts/Inter/Inter-ThinItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("Inter"), url("./assets/fonts/Inter/Inter-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: local("Inter"), url("./assets/fonts/Inter/Inter-Italic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local("Inter"), url("./assets/fonts/Inter/Inter-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: local("Inter"), url("./assets/fonts/Inter/Inter-BoldItalic.woff2") format("woff2");
 }
 
 * {
@@ -40,41 +89,6 @@ body {
 #root {
   max-width: 100vw;
   min-height: 100vh;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  position: sticky;
-  padding: var(--default-padding);
-  
-  background: var(--background-rgb);
-  box-shadow: 0 0 2px 0 var(--glow-shadow);
-  width: 100vw;
-  height: 66px;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
-
-.navbar-left {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.navbar-left>h3 {
-  color: var(--font-rgb);
-  margin-left: var(--default-padding);
-  user-select: all;
-}
-
-.navbar-right {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 #app {
