--- a/frontend/src/Components/Chat/chatActions.module.css
+++ b/frontend/src/Components/Chat/chatActions.module.css
@@ -19,7 +19,7 @@
   margin: 0 var(--default-margin);
   padding: 8px;
   
-  font-size: 16px;
+  font-size: 1rem;
   font-family: inherit;
   color: var(--font-rgb);
 
