message and button colors effects changed

--- a/frontend/src/Components/Buttons/button.module.css
+++ b/frontend/src/Components/Buttons/button.module.css
@@ -18,6 +18,7 @@
 }
 
 @media screen and (min-width: 1024px) {
+
   /* show keyboard shortcut hints (subtitle) only above the viewport of 1024px */
   .btn[data-shortcut]::before {
     content: attr(data-shortcut);
@@ -45,38 +46,40 @@
   background-color: var(--background-rgb);
 }
 
+.btn:focus {
+  outline: 2px solid var(--glow-shadow);
+  outline-offset: 2px;
+}
+
 .btn-primary {
-  background-image: linear-gradient(45deg, var(--primary-btn-start), var(--primary-btn-end));
+  background-image: linear-gradient(270deg, var(--primary_clr_1), var(--primary_clr_3));
 }
 
 .btn-primary:hover {
-  background-image: linear-gradient(-45deg, var(--primary-btn-start), var(--primary-btn-end));
-  box-shadow: 0 0 8px 2px var(--glow-shadow);
+  background-image: linear-gradient(315deg, var(--primary_clr_1), var(--primary_clr_3));
+  box-shadow: 2px 2px 8px 1px var(--glow-shadow);
 }
 
-.btn-primary:focus {
-  background-image: linear-gradient(-22deg, var(--primary-btn-start), var(--primary-btn-end));
-  outline: 2px solid var(--glow-shadow);
-  outline-offset: 2px;
+.btn-primary:active {
+  background-image: linear-gradient(315deg, var(--primary_clr_1), var(--primary_clr_3));
+  box-shadow: 2px 2px 6px 0px var(--glow-shadow);
 }
 
 .btn-secondary {
-  background-image: var(--secondary-btn);
+  background-image: var(--secondary_clr);
 }
 
 .btn-secondary:hover {
-  background-image: var(--secondary-btn);
   box-shadow: 0 0 8px 2px var(--faint-shadow);
 }
 
-.btn-secondary:focus {
-  background-image: var(--secondary-btn);
-  outline: 2px solid var(--glow-shadow);
-  outline-offset: 2px;
+.btn-secondary:active {
+  background-image: var(--secondary_clr);
+  box-shadow: 0 0 8px 2px var(--faint-shadow);
 }
 
 .btn:disabled {
-  background-image: var(--secondary-btn) !important;
+  background-image: var(--secondary_clr) !important;
   box-shadow: none !important;
   cursor: not-allowed;
   opacity: 0.8;
@@ -87,7 +90,18 @@
     min-width: unset;
     padding: 0.8rem 1.5rem;
   }
-  .btn-primary:focus, .btn-secondary:focus {
-    outline: none;
+
+  .btn:focus {
+    outline: 1px solid var(--glow-shadow);
+    outline-offset: 1px;
+  }
+
+  .btn-primary:hover,
+  .btn-secondary:hover {
+    box-shadow: none;
+  }
+
+  .btn-primary:hover {
+    background-image: linear-gradient(270deg, var(--primary_clr_1), var(--primary_clr_3));
   }
 }
