--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -3,9 +3,10 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
 
-  --primary-btn-start: rgb(28, 114, 233);
-  --primary-btn-end: rgb(176, 106, 179);
-  --secondary-btn: rgb(37, 37, 39);
+  --primary_clr_1: rgb(50,137,235);
+  --primary_clr_2: rgb(102,89,235);
+  --primary_clr_3: rgb(154,50,235);
+  --secondary_clr: rgb(37, 37, 39);
   --glow-shadow: rgba(255, 255, 255, 0.4);
   --faint-shadow: rgba(128, 128, 128, 0.1);
   --default-radius: 8px;
