--- a/frontend/src/Components/Chat/messagePanel.module.css
+++ b/frontend/src/Components/Chat/messagePanel.module.css
@@ -36,8 +36,8 @@
   /* preserve text formatting */
   word-break: break-word;
   /* same as - */
-  /* word-break: normal; */
-  /* overflow-wrap: break-word; */
+  /* word-break: normal;
+  overflow-wrap: break-word; */
   margin: calc(var(--default-margin)/2) 0;
   padding: var(--default-padding) calc(var(--default-padding)*2);
 
@@ -50,10 +50,13 @@
 
 .mssg-left {
   align-self: flex-start;
-  background: linear-gradient(180deg,
+  background-image: linear-gradient(180deg,
       var(--primary_clr_3) 0%,
       var(--primary_clr_2) 50%,
-      var(--primary_clr_1) 90%) no-repeat center fixed;
+      var(--primary_clr_1) 90%);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-attachment: fixed;
   padding-right: calc(var(--default-padding)*3);
   border-bottom-right-radius: var(--default-radius);
 }
@@ -72,7 +75,8 @@
 .mssg-right+.mssg-center,
 .mssg-center+.mssg-left,
 .mssg-center+.mssg-right {
-  margin-top: calc(var(--default-margin));
+  /* Add an extra space where messages from a party discontinue */
+  margin-top: calc(var(--default-margin)*2);
 }
 
 .mssg-center {
