--- a/frontend/src/Components/Buttons/button.module.css
+++ b/frontend/src/Components/Buttons/button.module.css
@@ -18,7 +18,6 @@
 }
 
 @media screen and (min-width: 1024px) {
-
   /* show keyboard shortcut hints (subtitle) only above the viewport of 1024px */
   .btn[data-shortcut]::before {
     content: attr(data-shortcut);
@@ -55,25 +54,27 @@
   background-image: linear-gradient(270deg, var(--primary_clr_1), var(--primary_clr_3));
 }
 
-.btn-primary:hover {
-  background-image: linear-gradient(315deg, var(--primary_clr_1), var(--primary_clr_3));
-  box-shadow: 2px 2px 8px 1px var(--glow-shadow);
-}
-
-.btn-primary:active {
-  background-image: linear-gradient(315deg, var(--primary_clr_1), var(--primary_clr_3));
-  box-shadow: 2px 2px 6px 0px var(--glow-shadow);
-}
-
 .btn-secondary {
   background-image: var(--secondary_clr);
 }
 
-.btn-secondary:hover {
-  box-shadow: 0 0 8px 2px var(--faint-shadow);
+@media (hover: hover) and (pointer: fine) {
+  .btn-primary:enabled:hover {
+    background-image: linear-gradient(315deg, var(--primary_clr_1), var(--primary_clr_3));
+    box-shadow: 2px 2px 8px 1px var(--glow-shadow);
+  }
+
+  .btn-secondary:enabled:hover {
+    box-shadow: 0 0 8px 2px var(--faint-shadow);
+  }
 }
 
-.btn-secondary:active {
+.btn-primary:enabled:active {
+  background-image: linear-gradient(315deg, var(--primary_clr_1), var(--primary_clr_3));
+  box-shadow: 2px 2px 6px 0px var(--glow-shadow);
+}
+
+.btn-secondary:enabled:active {
   background-image: var(--secondary_clr);
   box-shadow: 0 0 8px 2px var(--faint-shadow);
 }
@@ -94,14 +95,5 @@
   .btn:focus {
     outline: 1px solid var(--glow-shadow);
     outline-offset: 1px;
-  }
-
-  .btn-primary:hover,
-  .btn-secondary:hover {
-    box-shadow: none;
-  }
-
-  .btn-primary:hover {
-    background-image: linear-gradient(270deg, var(--primary_clr_1), var(--primary_clr_3));
   }
 }
